# compress

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  bit_stream.c  bit_stream.h  compress.c  compress.h  filter.c  filter.h  main.c
test/: CMakeLists.txt  bitstream_test.c  compress_test.c
